@@ -8,6 +8,7 @@ Version 0.2.3 - UNRELEASED
  * improved GUI for model scaling
  * allow to configure if the tool should move inside/along/around the boundary limits
  * prevent invalid input values (zero tool radius, ...)
+ * fixed a bug that could rarely cause eternal loops of the PushCutter
  * reduced memory consumption of toolpaths for python 2.6 or above
 
 Version 0.2.2 - 2010-03-17
